Fix table spacing bug

--- a/src/styles/roles.scss
+++ b/src/styles/roles.scss
@@ -9,10 +9,6 @@
   }
 }
 
-table {
-  border-spacing: 0;
-}
-
 @media (max-width: 500px) {
   td {
     border-bottom: 1px dotted #bbb;
